Calculate validation loss over all validation batches, reduce learning rate on plateau, export best and latest model